Kubernetes/AgrOne/AgrOne-Dev/AgroFlow/agroflow-webserver-dev-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: agroflow-webserver-dev
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agroflow-webserver-dev
  template:
    metadata:
      labels:
        app: agroflow-webserver-dev
    spec:
      containers:
      - name: agroflow-webserver-dev
        image: apache/airflow:2.8.1
        ports:
        - containerPort: 8080
#      volumes:
#      - name: airflow-dags
#        mountPath: /opt/airflow/dags
#      - name: airflow-logs
#        mountPath: /opt/airflow/logs
#      - name: airflow-config
#        mountPath: /opt/airflow/config
#      - name: airflow-plugins
#        mountPath: /opt/airflow/plugins
#      - name: airflow-env
#        mountPath: /opt/airflow/.env
#  dependsOn:
#    - agroflow-redis-dev
#    - agroflow-db-dev
