Kubernetes/AgrOne/AgrOne-Dev/AgroFlow/agroflow-worker-dev-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: agroflow-worker-dev
  namespace: agrotech-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agroflow-worker-dev
  template:
    metadata:
      labels:
        app: agroflow-worker-dev
    spec:
      containers:
      - name: agroflow-worker-dev
        image: apache/airflow:2.8.1
