Kubernetes/AgrOne/AgrOne-Dev/AgroFlow/agroflow-cli-dev-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: agroflow-cli-dev-service
  namespace: agrotech-dev
spec:
  selector:
    app: agroflow-cli-dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
