Kubernetes/AgrOne/AgrOne-Dev/AgroFlow/agroflow-db-dev-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: agroflow-db-dev-service
  namespace: agrotech-dev
spec:
  selector:
    app: agroflow-db-dev
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
