Kubernetes/AgrOne/AgrOne-Dev/AgroFlow/agroflow-flower-dev-service.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: agroflow-flower-dev-service
spec:
  selector:
    app: agroflow-flower-dev
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
